--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,6 +1,6 @@
 @import "admin-dynamic-input.css";
 @import "admin-tab.css";
-@import "admin-modal.css";
+/* @import "admin-modal.css"; */
 @import "admin-metabox.css";
 @import "admin-nav-menu.css";
 @import "plugins.css";
