--- a/assets/css/admin-nav-menu.css
+++ b/assets/css/admin-nav-menu.css
@@ -1,15 +1,15 @@
-.wp-admin p.ehx-nav-mode {
+.wp-admin p.edp-nav-mode {
     margin-top: 10px;
 }
 
-.wp-admin p.ehx-nav-roles {
+.wp-admin p.edp-nav-roles {
     display: none;
     margin-top: 5px;
 }
 
-.ehx-form-fields-section {
+.edp-form-fields-section {
     display: flex;
-    flex-direction: colehxn;
+    flex-direction: column;
     justify-content: flex-start;
     align-items: stretch;
     flex-wrap: nowrap;
@@ -23,30 +23,30 @@
     -webkit-box-sizing: border-box;
 }
 
-.wp-admin p.ehx-nav-roles label {
+.wp-admin p.edp-nav-roles label {
     margin-top: 2px !important;
     margin-bottom: 2px !important;
 }
-.ehx-form-fields-section label {
+.edp-form-fields-section label {
     float: left;
     width: 100%;
     margin: 0;
     padding: 0;
 }
-.wp-admin p.ehx-nav-roles label input[type=checkbox] {
+.wp-admin p.edp-nav-roles label input[type=checkbox] {
     margin-top: 2px !important;
 }
-.ehx-form-fields-section label span {
+.edp-form-fields-section label span {
     float: left;
     width: calc(100% - 20px);
 }
-.wp-admin p.ehx-nav-roles {
+.wp-admin p.edp-nav-roles {
     display: none;
     margin-top: 5px;
 }
-.ehx-form-fields-section {
+.edp-form-fields-section {
     display: flex;
-    flex-direction: colehxn;
+    flex-direction: coledpn;
     justify-content: flex-start;
     align-items: stretch;
     flex-wrap: nowrap;
@@ -59,24 +59,24 @@
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
-.wp-admin p.ehx-nav-roles label {
+.wp-admin p.edp-nav-roles label {
     margin-top: 2px !important;
     margin-bottom: 2px !important;
 }
-.ehx-form-fields-section label {
+.edp-form-fields-section label {
     float: left;
     width: 100%;
     margin: 0;
     padding: 0;
 }
-.wp-admin p.ehx-nav-roles label input[type=checkbox] {
+.wp-admin p.edp-nav-roles label input[type=checkbox] {
     margin-top: 2px !important;
 }
-.ehx-form-fields-section label input {
+.edp-form-fields-section label input {
     float: left;
     margin-top: 0;
 }
-.ehx-form-fields-section label span {
+.edp-form-fields-section label span {
     float: left;
     width: calc(100% - 20px);
 }
