--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,6 @@
   padding: 8px 15px !important;
   border: 1px solid var(--border-color) !important;
   border-radius: 0px;
-  margin-bottom: 24px;
   box-sizing: border-box;
   font-family: montserrat;
   color: #2c3e50;
@@ -337,6 +336,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 20px 0 12px 0;
+  gap: 24px;
 }
 .edp-input-fields .edp-field-full {
   width: 100%;
@@ -346,7 +346,16 @@
     width: calc(100% / 2 - 16px);
   }
 }
-
+.edp-input-fields .edp-input-checkbox {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+.edp-input-fields .edp-input-checkbox input[type="checkbox"],
+.edp-input-fields .edp-input-checkbox input[type="radio"] {
+  width: 24px;
+  height: 24px;
+}
 
 /* PAYMENT CALLBACK MODAL START */
 .edp-callback-modal .edp-modal-content {
@@ -367,135 +376,3 @@
   margin: 0 0 15px;
 }
 /* PAYMENT CALLBACK MODAL END */
-
-
-/* EVENT AREA START */
-.edp-ticket-area {
-  border: 1px solid #333;
-  padding: 24px;
-  max-width: 300px;
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-  border-radius: 12px;
-}
-/* @media (max-width: 575px) {
-  .edp-ticket-area {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    background: #fff;
-    shadow: 5px 5px 5px #fff;
-    border-radius: 0;
-    border-color: none;
-    width: 100%;
-  }
-} */
-.edp-ticket-area .edp-ticket-name-area {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.edp-ticket-area .edp-ticket-name-area p {
-  font-weight: 600;
-  margin-bottom: 0;
-}
-.edp-ticket-area .edp-ticket-qty-area {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 12px;
-}
-.edp-ticket-area .edp-ticket-qty-area .edp-ticket-qty-btn {
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  background-color: #333;
-  font-size: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0 !important;
-}
-.edp-ticket-area .edp-ticket-qty-area .edp-ticket-qty-input {
-  width: 100px;
-  height: 38px;
-  border-radius: 16px;
-  border: 1px solid #cdcdcd;
-  text-align: center;
-  font-size: 20px;
-}
-.edp-ticket-area .edp-ticket-btn-area .edp-ticket-btn {
-  background-color: #000;
-  width: 100%;
-  text-transform: uppercase;
-  border-radius: 12px;
-}
-/* EVENT AREA END */
-
-/* EVENT MODAL START */
-.edp-event-modal .edp-modal-dialog .edp-modal-content .edp-modal-header .edp-modal-close {
-  background-color: #fff;
-  border-radius: 40px;
-  height: 40px;
-  padding: 8px;
-  -webkit-transition: all .4 scubic-bezier(.4,0,.3,1);
-  transition: all .4 scubic-bezier(.4,0,.3,1);
-  width: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  top: 12px;
-  right: 12px;
-  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
-}
-.edp-event-modal .edp-modal-body {
-  padding: 0 !important;
-}
-.edp-event-modal .edp-modal-body .edp-body-content {
-  display: flex;
-}
-.edp-event-modal .edp-modal-body .edp-body-content .edp-body-left {
-  width: 70%;
-}
-.edp-event-modal .edp-modal-body .edp-body-content .edp-body-right {
-  width: 30%;
-  background-color: #f7f7f7;
-}
-/* .edp-event-modal .edp-modal-body .edp-body-content .edp-body-right .edp-body-right-content .edp-body-right-thumbnail {
-  max-height: 280px;
-}
-.edp-event-modal .edp-modal-body .edp-body-content .edp-body-right .edp-body-right-content .edp-body-right-thumbnail img {
-  height: 100%;
-  object-fit: cover;
-} */
-.edp-event-modal .edp-modal-body .edp-body-content .edp-body-right .edp-body-right-content .edp-body-content-summary {
-  padding: 24px;
-}
-.edp-event-modal .edp-modal-body .edp-body-content .edp-body-right .edp-body-right-content .edp-body-content-summary .edp-content-summary-title {
-  font-size: 1rem;
-  font-weight: 600;
-  line-height: 1.5rem;
-  color: #1e0a3c;
-}
-.edp-event-modal .edp-modal-body .edp-body-content .edp-body-right .edp-body-right-content .edp-body-content-summary .edp-content-summary-subtitle {
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5rem;
-}
-.edp-event-modal .edp-modal-body .edp-body-content .edp-body-right .edp-body-right-content .edp-body-content-summary .edp-content-summary-items .edp-content-summary-item {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 16px 0;
-  border-bottom: 1px solid #dddddd;
-}
-.edp-event-modal .edp-modal-body .edp-body-content .edp-body-right .edp-body-right-content .edp-body-content-summary .edp-content-summary-total {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 16px;
-  font-size: 1rem;
-  font-weight: 600;
-}
-/* EVENT MODAL END */
