--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -1,20 +1,20 @@
 .edp-modal-window {
-  position: fixed;
-  background-color: rgba(0, 0, 0, 0.25);
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 999;
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.3s;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.25);
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 999;
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s;
 }
 .edp-modal-window.edp-modal-active {
-  visibility: visible;
-  opacity: 1;
-  pointer-events: auto;
+    visibility: visible;
+    opacity: 1;
+    pointer-events: auto;
 }
 .edp-modal-window .edp-modal-dialog {
     position: absolute;
@@ -27,8 +27,10 @@
 .edp-modal-window .edp-modal-dialog.edp-modal-sm {
     max-width: 400px;
 }
-.edp-modal-window .edp-modal-dialog.edp-modal-lg {
-    width: 1200px;
+@media (min-width: 991px) {
+    .edp-modal-window .edp-modal-dialog.edp-modal-lg {
+        max-width: 1200px;
+    }
 }
 .edp-modal-window .edp-modal-dialog .edp-modal-content .edp-modal-body {
     padding: 2em;
