--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,6 +1,4 @@
-@import "admin-dynamic-input.css";
 @import "admin-tab.css";
-/* @import "admin-modal.css"; */
 @import "admin-metabox.css";
 @import "admin-nav-menu.css";
 @import "plugins.css";
@@ -15,333 +13,24 @@ a:focus {
 .invalid-feedback {
     color: red;
 }
-
-/* Form Builder CSS */
-.ehx-admin-drag-ctrls.ehx-admin-drag-ctrls-demo {
-    position: absolute;
-    right: 7px;
-    top: -30px;
-    left: auto;
-}
-.ehx-admin-drag-ctrls {
-    position: absolute;
-    top: -30px;
-    left: 0;
-}
-.ehx-admin-drag-ctrls a.active, .ehx-admin-drag-ctrls a.active:hover {
-    background-color: #0085ba;
-    color: #fff;
-}
-.ehx-admin-drag-ctrls a {
-    float: left;
-    margin: 0 5px 0 0;
-    height: 30px;
-    line-height: 30px;
-    background: #eee;
-    color: #888;
-    padding: 0 8px;
-    text-decoration: none;
-    border-radius: 2px 2px 0 0;
-}
-.ehx-admin-builder .ehx-admin-drag {
-    margin-top: 40px;
-}
-.ehx-admin-drag {
-    width: 100%;
-    background: #f1f1f1;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    position: relative;
-    padding: 60px 20px 20px 20px;
-}
-.ehx-admin-drag-row:last-child {
-    margin-bottom: 0;
-}
-.ehx-admin-drag-row {
-    width: 100%;
-    background: #fefefe;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    position: relative;
-    padding: 60px 20px 20px 20px;
-    margin: 0 0 60px 0;
-}
-.ehx-admin-drag-addrow {
-    text-align: center;
-    font-size: 14px;
-    color: #888;
-    cursor: pointer;
-    border: 1px dashed #bbb;
-    padding: 10px 0;
-    margin: 20px 0 0 0;
-}
-.ehx-admin-drag-row:last-child {
-    margin-bottom: 0;
-}
-.ehx-admin-drag-row {
-    width: 100%;
-    background: #fefefe;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    position: relative;
-    padding: 60px 20px 20px 20px;
-    margin: 0 0 60px 0;
-}
-
-.ehx-admin-drag-addrow i {
-    font-size: 23px !important;
-    margin: 0 !important;
-}
-.ehx-admin-builder i {
-    font-size: 15px !important;
-    height: 100% !important;
-    line-height: 100% !important;
-    margin: 0 5px 0 0 !important;
-}
-.ehx-admin-drag-ctrls {
-    position: absolute;
-    top: -30px;
-    left: 0;
-}
-.ehx-admin-drag-ctrls.columns a.active {
-    background-image: url("../images/1-column-active.gif");
-}
-.ehx-admin-drag-ctrls.columns a {
-    width: 30px !important;
-    background-image: url("../images/1-column.gif");
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.ehx-admin-drag-ctrls.columns a:nth-child(2) {
-    background-image: url("../images/2-columns.gif");
-}
-.ehx-admin-drag-ctrls.columns a:last-child {
-    background-image: url("../images/3-columns.gif");
-}
-.ehx-admin-drag-ctrls a.active, 
-.ehx-admin-drag-ctrls a.active:hover {
-    background-color: #0085ba;
-    color: #fff;
-}
-.ehx-admin-drag-ctrls a {
-    float: left;
-    margin: 0 5px 0 0;
-    height: 30px;
-    line-height: 30px;
-    background: #eee;
-    color: #888;
-    padding: 0 8px;
-    text-decoration: none;
-    border-radius: 2px 2px 0 0;
-}
-.ehx-admin-drag-rowsub-icons {
-    position: absolute;
-    right: 0;
-    top: -30px;
-    height: 30px;
-}
-.ehx-admin-drag-rowsub-icons span {
-    cursor: move !important;
-    text-decoration: none;
-    color: #fff;
-    width: 40px;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    display: block !important;
-    float: left;
-    background: #0085ba;
-    padding: 0 4px;
-    transition: all .2s linear;
-    border-left: 1px solid #379dd5;
-}
-.ehx-admin-drag-rowsub-icons i {
-    font-size: 18px !important;
-    margin: 0 !important;
-    top: 2px;
-    position: relative;
-}
-.ehx-admin-builder i {
-    font-size: 15px !important;
-    height: 100% !important;
-    line-height: 100% !important;
-    margin: 0 5px 0 0 !important;
-}
-.ehx-admin-drag-row-icons {
-    position: absolute;
-    right: 0;
-    top: -30px;
-    height: 30px;
-}
-.ehx-admin-drag-row-icons a {
-    text-decoration: none;
-    color: #fff;
-    width: 40px;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    display: block !important;
-    float: left;
-    background: #0085ba;
-    padding: 0 4px;
-    transition: all .2s linear;
-    border-left: 1px solid #379dd5;
-}
-.ehx .ui-sortable-handle {
-    -ms-touch-action: none;
-    touch-action: none;
-}
-.ehx-admin-drag-row-icons .ehx-admin-drag-row-start {
-    cursor: move !important;
-    text-decoration: none;
-    color: #fff;
-    width: 40px;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    display: block !important;
-    float: left;
-    background: #0085ba;
-    padding: 0 4px;
-    transition: all .2s linear;
-    border-left: 1px solid #379dd5;
-}
-.ehx-admin-drag-col.cols-1.cols-last {
-    width: 100%;
-}
-.ehx-admin-drag-col.cols-1 {
-    width: 100%;
-}
-.ehx-admin-drag-col {
-    float: left;
-    width: 100%;
-    background: #fff;
-    border: 1px dashed #bbb;
-    box-sizing: border-box;
-    padding: 20px;
-}
-.ehx-admin-columns {
-    display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-    gap: 1rem;
-}
-.ehx-admin-columns .col-span-1 {
-    grid-column: span 2 / span 2;
-}
-.ehx-admin-drag-col.cols-2 {
-    width: 49%;
-    margin: 0 1% 0 0;
-}
-.ehx-admin-drag-col.cols-3 {
-    width: 32%;
-}
-.ehx-admin-drag-add-field {
-    display: block;
-    width: 100%;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    color: #aaa;
-    text-decoration: none;
-}
-.ehx-admin-drag-add-field i {
-    font-size: 23px !important;
-    margin: 0 !important;
-}
-.ehx-admin-builder i {
-    font-size: 15px !important;
-    height: 100% !important;
-    line-height: 100% !important;
-    margin: 0 5px 0 0 !important;
-}
-
-
-/* Custom Form */
-.ehx-admin-boxed-links {
-    width: 100%;
-    text-align: center;
-}
-.ehx-admin-boxed-links a {
-    width: 33.3%;
-    float: left;
-    border-left: 1px solid #fff;
-    border-right: 1px solid #fff;
-    padding: 30px 25px !important;
-    background: #f8f8f8;
-    text-align: center;
-    display: inline-block !important;
-    font-size: 14px;
-    transition: all .2s linear;
-    text-decoration: none;
-    color: #666;
-    margin: 0 !important;
-    box-sizing: border-box !important;
-    border-radius: 2px;
-    font-weight: 600;
-}
-.ehx-admin-boxed-links a.ehx-admin-activebg {
-    background: #0085ba;
-    color: #fff;
-}
-
-.ehx-form-table.ehx-top-label .ehx-forms-line td {
-    padding: 0 0 15px 0;
-    display: block;
-}
-.ehx-form-table.ehx-top-label .ehx-forms-line td label {
-    margin: 0 0 5px 0;
-    display: inline-block;
-}
-.ehx-admin-metabox label {
-    display: block;
-    cursor: default;
-    padding: 0 !important;
-    font-size: 13px;
-    color: #666;
-}
-.ehx-long-field {
-    width: 100% !important;
-}
-.ehx_tooltip.dashicons {
-    height: 22px;
-}
 .ehx_tooltip {
     cursor: pointer;
     vertical-align: middle;
 }
-.ehx_tooltip.dashicons-editor-help:before {
-    float: left;
-    font-size: 20px;
-    line-height: 20px;
-    color: rgba(0, 0, 0, .85) !important;
-}
-.ehx_tooltip.dashicons:before {
-    height: 22px;
-}
-.ehx_tooltip {
-    cursor: pointer;
-    vertical-align: middle;
-}
-
 
 #toplevel_page_ehx_member_admin .wp-submenu li:last-child {
     display: none;
 }
-.user-details {
-    max-width: 600px;
-    border: 1px solid #c3bfbf;
-    padding: 16px;
-    margin: 24px 0;
+
+.edp-progress-container { 
+    background-color: rgb(192, 192, 192);
+    border-radius: 15px; 
 }
-.user-details .user-details-line {
-    margin-bottom: 12px;
-}
-.user-details .user-details-line p {
-    margin: 0;
-}
-.user-details .user-details-line p:first-child {
-    font-weight: 700;
+.edp-progress-container .edp-progress { 
+    background-color: #2271b1; 
+    color: white; 
+    padding: 1%; 
+    text-align: right; 
+    font-size: 20px; 
+    border-radius: 15px; 
 }
