--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,9 @@
   z-index: 0;
   border: none;
   position: relative;
+  padding: 24px;
+  background: #fff;
+  border-radius: 12px;
 }
 
 .edp-fs-title {
@@ -377,7 +380,7 @@
 }
 /* PAYMENT CALLBACK MODAL END */
 
-/* CAMPAIGN START END */
+/* CAMPAIGN START */
 .edp-campaign-list.edp-layout-grid {
   display: grid;
   gap: 24px;
@@ -400,10 +403,18 @@
 .edp-campaign-list .edp-campaign-item {
   border: 1px solid #e9e9e9;
   border-radius: 16px;
+  transition: all 0.5s ease;
+  height: 100%;
+}
+.edp-campaign-list .edp-campaign-item:hover {
+  box-shadow: 0px 10px 40px 0px rgba(128, 139, 165, 0.2);
 }
 .edp-campaign-list .edp-campaign-item .edp-campaign-card {
   color: inherit;
   text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 .edp-campaign-list .edp-campaign-item .edp-campaign-thumbnail {
   
@@ -415,6 +426,10 @@
 }
 .edp-campaign-list .edp-campaign-item .edp-campaign-content {
   padding: 30px;
+  position: relative;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 .edp-campaign-list .edp-campaign-item .edp-campaign-content .edp-content-title {
   line-height: 1.44;
@@ -428,4 +443,136 @@
   color: #696F8C;
   line-height: 1.5;
 }
+.edp-campaign-list .edp-campaign-item .edp-campaign-content .edp-campaign-btns {
+  margin-top: auto;
+}
+.edp-campaign-list .edp-campaign-item .edp-campaign-content .edp-campaign-btn {
+  border-radius: 8px;
+  background-color: transparent;
+  border: 1px solid #333;
+  color: #000;
+  padding: 6px 12px;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+.edp-campaign-list .edp-campaign-item .edp-campaign-content .edp-campaign-btn:hover {
+  background-color: #333;
+  color: #fff;
+}
 /* CAMPAIGN LIST END */
+
+/* PAGINATION START */
+.pagination {
+	margin-top: 2rem;
+  text-align: center;
+}
+.pagination a {
+	margin: 1rem .6rem;
+}
+.pagination a.page-numbers {
+	color: #000;
+  text-decoration: none;
+}
+.pagination a.page-numbers:hover {
+	color: #383838;
+}
+.pagination .page-numbers.current,
+.pagination .page-numbers.dots {
+	color: #e0e0e0;
+}
+.pagination a.next,
+.pagination a.prev {
+	display: inline-block;
+	padding: .2rem .8rem;
+	background-color: #000;
+	color: #fff;
+	-webkit-border-radius: 2px;
+	border-radius: 4px;
+}
+.pagination a.next:hover,
+.pagination a.prev:hover {
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	color: #fff;
+}
+/* PAGINATION END */
+
+.edp-campaign-section {
+  padding: 80px 0;
+}
+.edp-campaign-section .edp-campaign-content {
+  display: flex;
+  flex-direction: column;
+  gap: 64px;
+  padding: 30px;
+}
+.edp-campaign-section .edp-campaign-content .edp-campaign-contents .edp-campaign-cover img {
+  width: 100%;
+  /* object-fit: cover; */
+  border-radius: 24px;
+  max-height: 570px;
+}
+.edp-campaign-section .edp-campaign-content .edp-campaign-contents .edp-campaign-title {
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 1.2;
+  letter-spacing: -0.027em;
+  text-transform: none;
+  font-style: normal;
+  color: #0A0117;
+  margin: 24px 0;
+}
+.edp-campaign-section .edp-campaign-content .edp-campaign-categories {
+  
+}
+.edp-campaign-section .edp-campaign-content .edp-campaign-categories .edp-category-title {
+  font-weight: 500;
+  font-size: 20px;
+  margin-bottom: 20px;
+  line-height: 1.44;
+  color: #0A0117;
+}
+.edp-campaign-section .edp-campaign-content .edp-campaign-categories ul {
+  list-style: none;
+  margin: 0;
+}
+.edp-campaign-section .edp-campaign-content .edp-campaign-categories ul li {
+  display: block;
+  margin-bottom: 0.3em;
+  color: #0A0117;
+}
+.edp-campaign-section .edp-campaign-content .edp-campaign-categories ul li a {
+  color: #0A0117;
+  font-size: 16px;
+  line-height: 1.6;
+  text-decoration: none;
+  text-transform: capitalize;
+  transition: all 0.5s ease;
+}
+.edp-campaign-section .edp-campaign-content .edp-campaign-categories ul li a:hover {
+  color: #000000;
+  text-decoration: underline;
+}
+
+@media (min-width: 768px) {
+  .edp-campaign-section .edp-campaign-content .edp-campaign-contents .edp-campaign-title {
+    font-size: 42px;
+    line-height: 1;
+  }
+}
+@media (min-width: 991px) {
+  .edp-campaign-section .edp-campaign-content {
+    flex-direction: row;
+  }
+  /* .edp-campaign-section .edp-campaign-content .edp-campaign-contents {
+    width: 70%;
+  } */
+  .edp-campaign-section .edp-campaign-content .edp-campaign-contents .edp-campaign-title {
+    font-size: 48px;
+  }
+}
+@media (min-width: 1200px) {
+  .edp-campaign-section .edp-campaign-content .edp-campaign-contents .edp-campaign-title {
+    font-size: 58px;
+    line-height: 1.2;
+  }
+}
