--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@
   --background-light: #eceff1;
   --border-color: #ccc;
 }
+.edp-campaign-container {
+  max-width: 1280px;
+  margin: 0 auto;
+}
 
 #edp-heading {
   text-transform: uppercase;
