--- a/assets/css/admin-tab.css
+++ b/assets/css/admin-tab.css
@@ -1,42 +1,42 @@
 .edp-wrapper .nav-tab-wrapper {
-    margin-bottom: 20px;
-    border-bottom: 1px solid #ccc;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #ccc;
 }
 
 .edp-wrapper .nav-tab {
-    display: inline-block;
-    padding: 10px 20px;
-    text-decoration: none;
-    color: #007cba;
-    border: 1px solid transparent;
-    border-bottom: none;
-    cursor: pointer;
+  display: inline-block;
+  padding: 10px 20px;
+  text-decoration: none;
+  color: #007cba;
+  border: 1px solid transparent;
+  border-bottom: none;
+  cursor: pointer;
 }
 
 .edp-wrapper .nav-tab:hover {
-    background-color: #f1f1f1;
+  background-color: #f1f1f1;
 }
 
 .edp-wrapper .nav-tab-active {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-bottom: 1px solid #fff;
-    font-weight: bold;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-bottom: 1px solid #fff;
+  font-weight: bold;
 }
 
 /* Tab Content */
 .edp-wrapper .tab-content {
-    border: 1px solid #ccc;
-    padding: 20px;
-    background: #fff;
+  border: 1px solid #ccc;
+  padding: 20px;
+  background: #fff;
 }
 
 .edp-wrapper .tab-panel {
-    display: none; /* Hide inactive panels */
+  display: none; /* Hide inactive panels */
 }
 
 .edp-wrapper .tab-panel-active {
-    display: block; /* Show active panel */
+  display: block; /* Show active panel */
 }
 
 .edp-wrapper .edp-main-tab-content .form-table input[type="text"],
@@ -45,6 +45,68 @@
 .edp-wrapper .edp-main-tab-content .form-table input[type="url"],
 .edp-wrapper .edp-main-tab-content .form-table input[type="tel"],
 .edp-wrapper .edp-main-tab-content .form-table input[type="email"] {
-    width: 100%;
-    padding: 4px 12px;
+  width: 100%;
+  padding: 4px 12px;
+}
+
+.edp-switch {
+  position: relative;
+  display: inline-block;
+  width: 55px;
+  height: 28px;
+}
+
+.edp-switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.edp-switch-slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  border-radius: 34px;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.edp-switch-slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  border-radius: 50%;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input.edp-checkbox:checked + .edp-switch-slider {
+  background-color: #2196f3;
+}
+
+input.edp-checkbox:focus + .edp-switch-slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input.edp-checkbox:checked + .edp-switch-slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.edp-disabled-content {
+  filter: blur(0.5px) grayscale(0.4);
+  opacity: 0.6;
+  pointer-events: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
