added reCaptcha and addons
added reCaptcha and started implement addons features

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -2,6 +2,7 @@
 @import "admin-metabox.css";
 @import "admin-nav-menu.css";
 @import "plugins.css";
+@import "admin-addons.css";
 
 a {
     text-decoration: none;
