--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -22,6 +22,9 @@ a:focus {
 #toplevel_page_ehx_member_admin .wp-submenu li:last-child {
     display: none;
 }
+#toplevel_page_ehxdo_admin a[href="admin.php?page=ehxdo_user_view"] {
+    display: none;
+}
 
 .edp-progress-container { 
     background-color: rgb(192, 192, 192);
